--- a/config.json
+++ b/config.json
@@ -19,7 +19,8 @@
             },
             "url": "index.html",
 
-            "icons": [
+            "icons": [ "resources/light/icon.png", "resources/light/icon@2x.png" ],
+            "icons2": [
 				{
 					"style" : "light",
 					
